fix the size of the first column && stop the workers column from stretching

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,16 +19,18 @@ body {
   background-color: white;
   color: #727272 ;
   position: sticky;
-  width: 100%;
+  width: 3px;
   margin-left: 65px;
   left: 65px;
 }
 .my-v2-custum-div{
   background-color:white ;
-  width: 100%;
   position: sticky;
   color: #727272;
   left: 85px;
 
 }
 
+tr td:first-child {
+  background-color: #ff0000;
+}
